--- a/purrfectcats_demo/index.html
+++ b/purrfectcats_demo/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The Top 5 Purrfect Cats</title>
+  <title>Welcome to The Dessert Shop</title>
 
   <link rel="stylesheet" href="css/styles.css">  <!-- this links our preexisting stylesheet -->
 
@@ -12,31 +12,61 @@
 
 <body>
 
-<h1>The top 5 Purrfect Cats</h1>
-<h3>The Internet exists to share pictures of cats with the masses. This webpage is no exception. Here is a list of 5 purrfect cats, in no particular order.</h3>
-<a href="http://bit.ly/tiycrash" target="_blank">View the original project files here</a>
+<h1>The Dessert Shop</h1>
+<h3>Dessert is the best meal of the day. If we could eat it four times a day we would. Take look below and explore our offerings. We bet you'll want to eat dessert four times a day too.</h3>
+<a href="http://tinyurl.com/KidsCrash317" target="_blank">View the original project files here</a>
+<br>
+<br>
 
-<h2>The Cool Cat </h2>
-<p>The Cool Cat is one who doesn't care. He can often be found wearing aviator glasses, sporting a radical haircut, and hanging out in local coffeeshops. He only drinks craft beer.</p>
-<img src="images/coolcat.jpg" alt="coolcat">
-
-<h2> The Lazy Cat </h2>
-<p>The Lazy Cat can be found sitting on porches all day long. She is always up for a long brunch and will bring the best snacks to parties. She also really needs a haircut.
-</p>
-<img src="images/lazycat.jpg" alt="lazycat">
-
-<h2>The Hairless Cat </h2>
-<p>The Hairless Cat is the one who will always ask to borrow your sweater. She hates winter and would rather go to the dentist than live in a place where it snows all the time. Pro tip: scarves make the best gifts.</p>
-<img src="images/hairlesscat.jpg" alt="hairlesscat">
-
-<h2>The Sleeping Cat </h2>
-<p>The Sleeping Cat's ability to fall asleep literally anywhere will both impress and drive you nuts. While you fidget all night on a red eye from the west coast, he will get an amazing 8 hours sleep. Damn you, Sleeping Cat. Damn you.</p>
-<img src="images/sleepingcat.jpg" alt="sleepingcat">
-
-<h2>The Kitty Cat </h2>
-<p>The Kitty Cat might be the most purrfect cat of all. Her real name is Rue but everyone calls her Kitty. She belongs to Lexi and loves to curl up in your lap and take a snooze. When left alone, she turns into a tiny terror.</p>
-<img src="images/kittycat.jpg" alt="kittycat">
-
+<div>
+  <div class="left">
+    <h2>Cookies</h2>
+    <p>Colorful french macarons filld with ganache, jam, or buttercream. We experiement with flavors and we recommend trying them all.</p>
+  </div>
+  <div class="right">
+    <img src="images/cookies.jpg" alt="cookies">
+  </div>
+</div>
+<br>
+<div>
+  <div class="left">
+    <h2>Cupcakes</h2>
+    <p>Cupcakes are a party essential. Personal cakes in as many flavors as you can think of. And we'll decorate them just like you need too.</p>
+  </div>
+  <div class="right">
+    <img src="images/cupcakes.jpg" alt="cupcakes">
+  </div>
+</div>
+<br>
+<div>
+  <div class="left">
+    <h2>Pie</h2>
+    <p>Apple, cherry, blueberry, pumpkin, chocolate, lemon. Pie might be our favorite dessert. They're good hot with ice cream, or cold for breakfast. See, dessert for all meals!</p>
+  </div>
+  <div class="right">
+    <img src="images/pie.jpg" alt="pie">
+  </div>
+</div>
+<br>
+<div>
+  <div class="left">
+    <h2>Popsicles</h2>
+    <p>It gets hot in the summer. Popsicles to the rescue! Stop in and try one of our frozen treats. Available May through September.</p>
+  </div>
+  <div class="right">
+    <img src="images/popsicle.jpg" alt="popsicle">
+  </div>
+</div>
+<br>
+<div>
+  <div class="left">
+    <h2>Drinks</h2>
+    <p>Who says you can't drink your dessert? We sure don't. Ice cream floats or hot chocolate with mounds of whipped cream. Take your pick.</p>
+  </div>
+  <div class="right">
+    <img src="images/drink.jpg" alt="drink">
+  </div>
+</div>
 <br>
 
 <p>All photos were used with permission from the incredibly awesome site, <a href="http://unsplash.com" target="_blank">Unsplash.</p>
